--- a/jedy-2/css/style_v2.scss
+++ b/jedy-2/css/style_v2.scss
@@ -4,7 +4,7 @@ $black: #333;
 $active: #e74c3c;
 $green: #66d6c5;
 $yellow: #f4de7f;
-$slight-gray:#f8f8f8;
+$slight-gray: #f8f8f8;
 
 /*================================================================
 Default Styles
@@ -152,7 +152,7 @@ Navbar
 }
 
 #top-social-menu li {
-  float: left;
+  // float: left;
   padding: 10px 15px;
 }
 
@@ -1159,164 +1159,183 @@ li.layer:nth-child(12) a {
 // =========================================
 // Steps 跑跑流程
 // =========================================
-.timeline {
-  list-style: none;
-  padding: 20px 0 20px;
-  position: relative;
-}
-/* Creates vertical line in middle */
+.run-process {
+  .row-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 
-.timeline:before {
-  top: 0;
-  bottom: 0;
-  position: absolute;
-  content: " ";
-  width: 3px;
-  background-color: #eeeeee;
-  left: 50%;
-  margin-left: -1.5px;
-}
+    .btn-box {
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
-/* This seems to align the glyph icons down the middle to an extent. */
-.timeline > li {
-  margin-bottom: 20px;
-  position: relative;
-}
+      .running-button {
+        width: 50%;
+        margin: 0 auto;
+      }
+    }
 
-/* I'm genuinely unsure on what this does! */
-.timeline > li:before,
-.timeline > li:after {
-  content: " ";
-  display: table;
-}
+    .timeline {
+      list-style: none;
+      padding: 20px 0 20px;
+      position: relative;
+      width: 80%;
 
-/* Unsure on this also */
-.timeline > li:after {
-  clear: both;
-}
-/* Also unsure! So confusing */
-.timeline > li:before,
-.timeline > li:after {
-  content: " ";
-  display: table;
-}
+      &:before {
+        top: 0;
+        bottom: 0;
+        position: absolute;
+        content: " ";
+        width: 3px;
+        background-color: #eeeeee;
+        left: 50%;
+        margin-left: -1.5px;
+      }
+    }
+    /* Creates vertical line in middle */
 
-/* Also unsure on this malarki */
-.timeline > li:after {
-  clear: both;
-}
+    /* This seems to align the glyph icons down the middle to an extent. */
+    .timeline > li {
+      margin-bottom: 20px;
+      position: relative;
+    }
 
-/* This produces the actual box around each item */
-.timeline > li > .timeline-panel {
-  width: 46%;
-  background-color: $slight-gray;
-  float: left;
-  border: 1px solid #d4d4d4;
-  border-radius: 2px;
-  padding: 20px;
-  position: relative;
-  -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
-  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
-}
-/* Below section adds depth to triangle pointer */
-.timeline > li > .timeline-panel:before {
-  position: absolute;
-  top: 26px;
-  right: -15px;
-  display: inline-block;
-  border-top: 15px solid transparent;
-  border-left: 15px solid #ccc;
-  border-right: 0 solid #ccc;
-  border-bottom: 15px solid transparent;
-  content: " ";
-}
+    /* I'm genuinely unsure on what this does! */
+    .timeline > li:before,
+    .timeline > li:after {
+      content: " ";
+      display: table;
+    }
 
-/* Below section adds white triangle point to edge of timeline panels. */
-.timeline > li > .timeline-panel:after {
-  position: absolute;
-  top: 27px;
-  right: -14px;
-  display: inline-block;
-  border-top: 14px solid transparent;
-  border-left: 14px solid #fff;
-  border-right: 0 solid #fff;
-  border-bottom: 14px solid transparent;
-  content: " ";
-}
+    /* Unsure on this also */
+    .timeline > li:after {
+      clear: both;
+    }
+    /* Also unsure! So confusing */
+    .timeline > li:before,
+    .timeline > li:after {
+      content: " ";
+      display: table;
+    }
 
-/* This particular section of CSS is of note - Appears to centre the glyph icon in the middle of timeline with background */
-.timeline > li > .timeline-badge {
-  color: #fff;
-  width: 50px;
-  height: 50px;
-  line-height: 50px;
-  font-size: 1.4em;
-  text-align: center;
-  position: absolute;
-  top: 16px;
-  left: 50%;
-  margin-left: -25px;
-  background-color: #999999;
-  z-index: 100;
-  border-top-right-radius: 50%;
-  border-top-left-radius: 50%;
-  border-bottom-right-radius: 50%;
-  border-bottom-left-radius: 50%;
-}
+    /* Also unsure on this malarki */
+    .timeline > li:after {
+      clear: both;
+    }
 
-/* Below code 'inverts' or floats the panel to the right. */
-.timeline > li.timeline-inverted > .timeline-panel {
-  float: right;
-}
-/* Below code enables the arrow pointing to the timeline itself. */
-.timeline > li.timeline-inverted > .timeline-panel:before {
-  border-left-width: 0;
-  border-right-width: 15px;
-  left: -15px;
-  right: auto;
-}
+    /* This produces the actual box around each item */
+    .timeline > li > .timeline-panel {
+      width: 46%;
+      background-color: $slight-gray;
+      float: left;
+      border: 1px solid #d4d4d4;
+      border-radius: 2px;
+      padding: 20px;
+      position: relative;
+      -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+      box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+    }
+    /* Below section adds depth to triangle pointer */
+    .timeline > li > .timeline-panel:before {
+      position: absolute;
+      top: 26px;
+      right: -15px;
+      display: inline-block;
+      border-top: 15px solid transparent;
+      border-left: 15px solid #ccc;
+      border-right: 0 solid #ccc;
+      border-bottom: 15px solid transparent;
+      content: " ";
+    }
 
-/* This is the highlight on the arrow */
-.timeline > li.timeline-inverted > .timeline-panel:after {
-  border-left-width: 0;
-  border-right-width: 14px;
-  left: -14px;
-  right: auto;
-}
+    /* Below section adds white triangle point to edge of timeline panels. */
+    .timeline > li > .timeline-panel:after {
+      position: absolute;
+      top: 27px;
+      right: -14px;
+      display: inline-block;
+      border-top: 14px solid transparent;
+      border-left: 14px solid #fff;
+      border-right: 0 solid #fff;
+      border-bottom: 14px solid transparent;
+      content: " ";
+    }
 
-/* Rest of the CSS is rather self explanatory - Just stylings and et cetera whereas above is more layout oriented. */
-.timeline-badge.primary {
-  background-color: #2e6da4 !important;
-}
+    /* This particular section of CSS is of note - Appears to centre the glyph icon in the middle of timeline with background */
+    .timeline > li > .timeline-badge {
+      color: #fff;
+      width: 50px;
+      height: 50px;
+      line-height: 50px;
+      font-size: 1.4em;
+      text-align: center;
+      position: absolute;
+      top: 16px;
+      left: 50%;
+      margin-left: -25px;
+      background-color: #999999;
+      z-index: 100;
+      border-top-right-radius: 50%;
+      border-top-left-radius: 50%;
+      border-bottom-right-radius: 50%;
+      border-bottom-left-radius: 50%;
+    }
 
-.timeline-badge.success {
-  background-color: #3f903f !important;
-}
+    /* Below code 'inverts' or floats the panel to the right. */
+    .timeline > li.timeline-inverted > .timeline-panel {
+      float: right;
+    }
+    /* Below code enables the arrow pointing to the timeline itself. */
+    .timeline > li.timeline-inverted > .timeline-panel:before {
+      border-left-width: 0;
+      border-right-width: 15px;
+      left: -15px;
+      right: auto;
+    }
 
-.timeline-badge.warning {
-  background-color: #f0ad4e !important;
-}
+    /* This is the highlight on the arrow */
+    .timeline > li.timeline-inverted > .timeline-panel:after {
+      border-left-width: 0;
+      border-right-width: 14px;
+      left: -14px;
+      right: auto;
+    }
 
-.timeline-badge.danger {
-  background-color: #d9534f !important;
-}
+    /* Rest of the CSS is rather self explanatory - Just stylings and et cetera whereas above is more layout oriented. */
+    .timeline-badge.primary {
+      background-color: #2e6da4 !important;
+    }
 
-.timeline-badge.info {
-  background-color: #5bc0de !important;
-}
-/* Removes gap above timeline title */
-.timeline-title {
-  margin-top: 0;
-  color: inherit;
-}
+    .timeline-badge.success {
+      background-color: #3f903f !important;
+    }
 
-.timeline-body > p,
-.timeline-body > ul {
-  margin-bottom: 0;
-}
+    .timeline-badge.warning {
+      background-color: #f0ad4e !important;
+    }
 
-.timeline-body > p + p {
-  margin-top: 5px;
-}
+    .timeline-badge.danger {
+      background-color: #d9534f !important;
+    }
 
-/* Timeline CSS ends here */
+    .timeline-badge.info {
+      background-color: #5bc0de !important;
+    }
+    /* Removes gap above timeline title */
+    .timeline-title {
+      margin-top: 0;
+      color: inherit;
+    }
+
+    .timeline-body > p,
+    .timeline-body > ul {
+      margin-bottom: 0;
+    }
+
+    .timeline-body > p + p {
+      margin-top: 5px;
+    }
+  }
+}
